--- a/projetos/O Senhor dos Aneis/estilo.css
+++ b/projetos/O Senhor dos Aneis/estilo.css
@@ -25,10 +25,15 @@ h1{
     text-indent: -5000px;
 }
 
+nav{
+    width: 100%;
+    height: 34px; /* Altura padrão 34 retira-se 10 para compensar o padding*/
+    background: url("img/menu_bg.gif") no-repeat center;
+}
+
 nav ul{
     width: 100%;
     height: 24px; /* Altura padrão 34 retira-se 10 para compensar o padding*/
-    background: url("img/menu_bg.gif") no-repeat center;
     text-align: center;
     padding-top: 10px;
 
@@ -41,7 +46,9 @@ nav ul{
     }
 
     #menu{
+        display: none;
         float: right;
+
 
     }
 
@@ -119,6 +126,21 @@ nav ul{
         background: url("img/rodape_bg.gif") no-repeat center;
     }
 
+
+    #propaganda{
+        position: absolute;
+        top: 50px;
+        left: 50px;
+
+        /*text-align: center;*/
+        width: 100px;
+        height: 80px;
+        background-color: #999999;
+        padding: 20px;
+
+    }
+
+
 @media screen and (max-width: 770px) {
 
     #site{
@@ -144,6 +166,14 @@ nav ul{
 
         #direita{
             width: 100%;
+        }
+
+        #menu {
+            display: block;
+        }
+
+        nav ul{
+            display: none;
         }
     }
 
